--- a/part1/css/style.css
+++ b/part1/css/style.css
@@ -866,15 +866,27 @@ textarea:focus {
 
 .myimage {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 10%;
+  left: 30%;
   width: 500px;
   height: 500px;
-  z-index: 10;
+  z-index: 100;
 }
 
 .overlay {
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 1;
+
+}
+
+.overlayImg {
   position: fixed;
   top: 0;
   left: 0;
